# tyre_combiner

./: .gitignore  backup_tyre_correct.sql  docker-compose.yml  init-db.sh  main.py  pyproject.toml  pyrightconfig.json
alembic/: env.py
alembic/versions/: 1474bb6e743b_initial_core_structure.py  ebb5b53600c8_add_unique_constraint_to_rawproducr.py
app/: config.py  database.py  main.py
app/api/v1/: __init__.py  avito.py  imports.py  robotyre.py
app/models/: product.py
app/schemas/: avito.py  base.py  master_product.py  product.py  product_image.py  raw_product.py  robotyre.py
app/services/: avito_parse.py  parser.py  storage.py
