[project]
name = "tyre-combiner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "lxml>=6.0.2",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
useLibraryCodeForTypes = false
typeCheckingMode = "strict"



[tool.uv]
dev-dependencies = ["ruff", "black"]
